# SCPL-Package

./: BasicBlock.py  Encoder.py  Extra.py  LICENSE  Loss.py  Model.py  Projector.py  README.md  RegSCPLModel.py  augment_fn.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
JOSS/: paper.bib  paper.md
src/DecoupleFlow/: RegSCPLModel.py  __init__.py
src/decoupleflow/: BasicBlock.py  DecoupleFlow.py  Encoder.py  Extra.py  Loss.py  Projector.py  augment_fn.py  utils.py
tests/: test_block_components.py  test_gradient_isolation.py  test_input_validation.py  test_io_contract.py  test_model_equivalence.py  test_multi_gpu_contract.py  test_multi_t_behavior.py  test_state_dict_roundtrip.py
