[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decoupleflow"
version = "0.1.0"
description = "DecoupleFlow package"
readme = "README.md"
authors = [{name = "You-Teng, Lin", email = "lyt0310603@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "nltk>=3.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["decoupleflow*"]
